[project]
name = "krepo"
version = "0.1.0"
description = "A light-weight knowledge repository used to store neural network architecture and platform prameters."
readme = "README.md"
authors = [
    {name = "Dominik Sukic", email = "dominik.sukic@stud.uni-due.de"},
]
requires-python = ">=3.11"
dependencies = [
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
]

[project.scripts]
vbservice-client = "vbservice.client:main"
vbservice-server = "vbservice.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
