[project]
name = "krepo"
version = "0.1.0"
description = "A light-weight knowledge repository used to store neural network architecture and platform prameters."
readme = "README.md"
authors = [
    {name = "Dominik Sukic", email = "dominik.sukic@stud.uni-due.de"},
]
requires-python = ">=3.11"
dependencies = [
    "mlflow==3.7.0",
    "torch>=2.9.1",
]

[project.scripts]
vbservice-client = "vbservice.client:main"
vbservice-server = "vbservice.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
